css/style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");

body {
  background-image: url("../assets/pinkSky.jpg"); 
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
/* attachment is what let you wrap it to the screen properly */
  background-attachment: fixed;
  overflow: hidden;

  /* font-family: basco-std, serif;
  font-style: normal;
  font-weight: 800;
  color: #3e685d; */
}

h1 {
  color: #7c6d84;
  text-shadow: 5px 5px 5px #e6d0dc;
  text-align: center;
  font-size: 60px;
}

.tic-box {
  text-align: center;
  justify-content: center;
}

/* adding height and width has it retain shape */

#gameBox {
  background-color: #d59ab566;
  
}

#topLeft {
  margin-top: 10px;
  border-bottom: solid #5a495a;
  border-right: solid #5a495a;
  width: 85px;
  height: 85px;
}

#topMiddle {
  margin-top: 10px;
  border-bottom: solid #5a495a;
  width: 85px;
  height: 85px;
}

#topRight {
  margin-top: 10px;
  border-left: solid #5a495a;
  border-bottom: solid #5a495a;
  width: 85px;
  height: 85px;
}

#middleLeft {
  border-right: solid #5a495a;
  border-bottom: solid #5a495a;
  width: 85px;
  height: 85px;
}

#middleMiddle {
  border-bottom: solid #5a495a;
  border-right: solid #5a495a;
  width: 85px;
  height: 85px;
}

#middleRight {
  border-bottom: solid #5a495a;
  width: 85px;
  height: 85px;
}

#bottomLeft {
  border-right: solid #5a495a;
  width: 85px;
  height: 85px;
}

#bottomMiddle {
  border-right: solid #5a495a;
  width: 85px;
  height: 85px;
}

#bottomRight {
  width: 85px;
  height: 85px;
}

#oneScore {
  width: 200px;
  height: 250px;
  border: 5px;
  border-color: #5a495a;
  border-style: solid;
  background-color: #d59ab566;
}

#scoreHead1 {
  border-bottom: solid #5a495a;
}

#scoreHead2 {
  border-bottom: solid #5a495a;
}

#twoScore {
  width: 200px;
  height: 250px;
  border: 5px;
  border-color: #5a495a;
  border-style: solid;
  background-color: #d59ab566;
}

/* #box {
  width: fit-content;
  height: fit-content;
  border: 2px white;
  padding: 10px;
  margin: 10px;
} */

/* .container {
  display: flex;
  justify-content: center;
  align-items: center;
  max-height: auto;
  max-width: auto;
  margin-top: 200px;
  margin-bottom: 200px;

} */

/* you have to set a border style for it to display */

/* #gameBox {
  border: 5px;
  border-color: purple;
  border-style: solid;
}

#turnDisplay {
  border: 3px;
  border-color: blueviolet;
  background-color: aliceblue;
  border-style: solid;
} */

